--- a/files/s3/s3_lifecycle.json.j2
+++ b/files/s3/s3_lifecycle.json.j2
@@ -5,7 +5,7 @@
   {% if rule.when | default(true) | bool %}
 
     {% set var_rule_name = rule.name | default('unnamed-' + (loop.index | string), true) %}
-    {% set var_status = ((rule.enabled | default('', true) | string) != '')
+    {% set var_status = ((rule.enabled | default('') | string) != '')
       | ternary(rule.enabled | default(true), true) | bool | ternary('Enabled', 'Disabled')
     %}
 
@@ -35,7 +35,7 @@
     {% if (var_expiration_days | int) > 0 %}
 
       {% set var_expiration = var_expiration | combine({
-          'Days': var_expiration_days
+          'Days': (var_expiration_days | int)
         })
       %}
 
@@ -44,7 +44,7 @@
     {% if var_remove_delete_markers %}
 
       {% set var_expiration = var_expiration | combine({
-          'DeleteMarker': true
+          'ExpiredObjectDeleteMarker': true
         })
       %}
 
@@ -65,12 +65,27 @@
 
       {% set var_rule_item = var_rule_item | combine({
           'NoncurrentVersionExpiration': {
-            'NoncurrentDays': var_older_versions_expiration_days
+            'NoncurrentDays': (var_older_versions_expiration_days | int)
           }
         })
       %}
 
     {% endif %}
+
+    {% set var_abort_incomplete_multipart_upload_days = rule.abort_incomplete_multipart_upload_days | default(0, true) | string %}
+
+    {% if (var_abort_incomplete_multipart_upload_days | int) > 0 %}
+
+      {% set var_rule_item = var_rule_item | combine({
+          'AbortIncompleteMultipartUpload': {
+            'DaysAfterInitiation': (var_abort_incomplete_multipart_upload_days | int)
+          }
+        })
+      %}
+
+    {% endif %}
+
+
 
     {% set ns_rules.list = ns_rules.list + [var_rule_item] %}
 
